--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/react": "^16.14.14",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
+    "@types/styled-components": "^5.1.13",
+    "firebase": "^9.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -38,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
+    "react-router-dom": "^5.3.0"
   }
 }
