--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
     "@types/react-router-dom": "^5.1.8",
+    "prettier": "2.4.0",
     "react-router-dom": "^5.3.0"
   }
 }
