--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.7",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -14,6 +17,7 @@
     "@types/react-redux": "^7.1.18",
     "@types/styled-components": "^5.1.13",
     "firebase": "^9.0.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
@@ -44,7 +48,6 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/core": "^4.12.3",
     "@types/react-router-dom": "^5.1.8",
     "prettier": "2.4.0",
     "react-router-dom": "^5.3.0"
