--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-firebase-hooks": "^3.0.4",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-super-responsive-table": "^5.2.0",
     "styled-components": "^5.3.1",
     "typescript": "~4.1.5"
   },
